Fix Smithery deployment: Use local target and add module field
- Change smithery.yaml to minimal config for local TypeScript runtime
- Add module field to package.json pointing to src/index.ts entry point
- Remove unsupported fields (version, startCommand, exampleConfig, description, tags)
- Enables proper local server deployment on Smithery.ai

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "email-smtp-imap-mcp",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Email MCP Server with SMTP and IMAP support - simple, clean, and flexible",
   "main": "build/index.js",
+  "module": "src/index.ts",
   "types": "build/index.d.ts",
   "type": "module",
   "bin": {
